--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,7 +20,9 @@
 <resources>
 
     <color name="owncloud_blue">@color/actionbar_start_color</color>
-    <color name="owncloud_blue_accent">#35537A</color>
+    <color name="owncloud_blue_accent">#0086D6</color>
+    <color name="owncloud_green_accent">#00C236</color>
+    <!--<color name="owncloud_blue_accent">#35537A</color>-->
     <color name="owncloud_blue_bright">#00ddff</color>
 
     <color name="list_item_lastmod_and_filesize_text">#989898</color>
@@ -30,10 +32,11 @@
     <color name="drawerMenuTextColor">#000000</color>
     <color name="list_divider_background">#fff0f0f0</color>
     <color name="filelist_icon_backgorund">#DDDDDD</color>
-    <color name="dark_background_text_color">#EEEEEE</color>
+    <color name="dark_background_text_color">#FFFFFF</color>
+    <!--<color name="dark_background_text_color">#EEEEEE</color>-->
     <color name="login_text_color">#757575</color>
     <color name="login_text_hint_color">#757575</color>
-    <color name="primary_button_color">@color/owncloud_blue_accent</color>
+    <color name="primary_button_color">@color/owncloud_green_accent</color>
     <color name="secondary_button_color">#D6D7D7</color>
     <color name="transparent">#00000000</color>
 
