--- a/res/values/setup.xml
+++ b/res/values/setup.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- App name  and other strings-->
-    <string name="app_name">ownCloud</string>
+    <string name="app_name">CloudBag</string>
+    <!--<string name="app_name">ownCloud</string>-->
     <string name="account_type">owncloud</string>	<!-- better if was a domain name; but changing it now would require migrate accounts when the app is updated -->
     <string name="authority">org.owncloud</string>	<!-- better if was the app package with ".provider" appended ; it identifies the provider -->
     <string name ="db_file">owncloud.db</string>
     <string name ="db_name">ownCloud</string>
     <string name ="data_folder">owncloud</string>
     <string name ="log_name">Owncloud_</string>
-    <string name ="default_display_name_for_root_folder">ownCloud</string>
+    <string name ="default_display_name_for_root_folder">CloudBag</string>
+    <!--<string name ="default_display_name_for_root_folder">ownCloud</string>-->
     <string name ="user_agent">Mozilla/5.0 (Android) ownCloud-android/%1$s</string>
     
     <!-- URLs and flags related -->
-    <string name="server_url"></string>
-    <bool name="show_server_url_input">true</bool>
-    <bool name="show_welcome_link">true</bool>
+    <string name="server_url">https://cloudbag.tnet.it</string>
+    <bool name="show_server_url_input">false</bool>
+    <bool name="show_welcome_link">false</bool>
 	<string name="welcome_link_url">"https://owncloud.com/mobile/new"</string>
 	<string name="share_api_link"></string>
     
@@ -28,11 +30,16 @@
     
     
     <!-- Colors -->
+    <!--<color name="login_background_color">#FFFFFF</color>-->
+    <!--<color name="login_logo_background_color">#FFFFFF</color>-->
+    <!--<color name="background_color">#F7F7F7</color>-->
+    <!--<color name="actionbar_start_color">#1D2D44</color>-->
+    <!--<color name="actionbar_end_color">#1D2D44</color>-->
     <color name="login_background_color">#FFFFFF</color>
     <color name="login_logo_background_color">#FFFFFF</color>
-    <color name="background_color">#F7F7F7</color>
-    <color name="actionbar_start_color">#1D2D44</color>
-    <color name="actionbar_end_color">#1D2D44</color>
+    <color name="background_color">#FFFFFF</color>
+    <color name="actionbar_start_color">#0086D6</color>
+    <color name="actionbar_end_color">#0086D6</color>
     
     <!-- Button -->
     <color name="button_text_color">#000000</color>
@@ -45,10 +52,11 @@
     <bool name="imprint_enabled">false</bool> 
     <bool name="recommend_enabled">true</bool>
     <bool name="feedback_enabled">true</bool>
-    <string name="url_help">http://owncloud.com/mobile/help</string>
+    <string name="url_help">http://tnet.it/contatti</string>
     <string name="url_imprint"></string>
     <string name="mail_recommend">"mailto:"</string>
-    <string name="mail_feedback">"mailto:apps@owncloud.com"</string>
+    <string name="mail_feedback">"mailto:support@tnet.it"</string>
+    //TODO:fix link
     <string name="url_app_download">"https://play.google.com/store/apps/details?id=com.owncloud.android"</string>
 
     <!--Destination mail for sending log files -->
