--- a/res/layout-land/account_setup.xml
+++ b/res/layout-land/account_setup.xml
@@ -229,18 +229,18 @@
 		    android:text="@string/setup_btn_connect"
             android:contentDescription="@string/setup_btn_connect"/>
 		
-		<Button
-		    android:id="@+id/welcome_link"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_gravity="center_horizontal"
-		    android:background="@android:color/transparent"
-		    android:onClick="onRegisterClick"
-		    android:paddingBottom="5dp"
-		    android:paddingTop="5dp"
-		    android:text="@string/auth_register"
-			android:textColor="@color/login_text_color"
-            android:contentDescription="@string/auth_register"/>
+		<!--<Button-->
+		    <!--android:id="@+id/welcome_link"-->
+		    <!--android:layout_width="wrap_content"-->
+		    <!--android:layout_height="wrap_content"-->
+		    <!--android:layout_gravity="center_horizontal"-->
+		    <!--android:background="@android:color/transparent"-->
+		    <!--android:onClick="onRegisterClick"-->
+		    <!--android:paddingBottom="5dp"-->
+		    <!--android:paddingTop="5dp"-->
+		    <!--android:text="@string/auth_register"-->
+			<!--android:textColor="@color/login_text_color"-->
+            <!--android:contentDescription="@string/auth_register"/>-->
 	</LinearLayout>
 		
 </RelativeLayout>
