--- a/res/values/setup.xml
+++ b/res/values/setup.xml
@@ -11,13 +11,13 @@
     <string name ="log_name">cloudbag_</string>
     <string name ="default_display_name_for_root_folder">CloudBag</string>
     <!--<string name ="default_display_name_for_root_folder">ownCloud</string>-->
-    <string name ="user_agent">Mozilla/5.0 (Android) cloudbag-android</string>
+    <string name ="user_agent">Mozilla/5.0 (Android) cloudbag-android/%1$s</string>
     
     <!-- URLs and flags related -->
-    <string name="server_url">https://cloudbag.tnet.it</string>
+    <string name="server_url">"https://cloudbag.tnet.it"</string>
     <bool name="show_server_url_input">false</bool>
     <bool name="show_welcome_link">false</bool>
-	<string name="welcome_link_url">https://owncloud.com/mobile/new</string>
+	<string name="welcome_link_url">"https://owncloud.com/mobile/new"</string>
 	<string name="share_api_link"></string>
     
     <!-- Flags to setup the authentication methods available in the app -->
@@ -48,16 +48,15 @@
     <bool name="multiaccount_support">true</bool>
     
     <!-- Help, imprint and feedback -->
-    <bool name="help_enabled">true</bool>
+    <bool name="help_enabled">false</bool>
     <bool name="imprint_enabled">false</bool> 
     <bool name="recommend_enabled">true</bool>
     <bool name="feedback_enabled">true</bool>
-    <string name="url_help">http://tnet.it/contatti</string>
+    <string name="url_help">"http://tnet.it/contatti"</string>
     <string name="url_imprint"></string>
     <string name="mail_recommend">"mailto:"</string>
     <string name="mail_feedback">"mailto:support@tnet.it"</string>
-    //TODO:fix link
-    <string name="url_app_download">"https://play.google.com/store/apps/details?id=com.owncloud.android"</string>
+    <string name="url_app_download">"https://play.google.com/store/apps/details?id=it.tnet.cloudbag.android"</string>
 
     <!--Destination mail for sending log files -->
     <string name="mail_logger"></string>
