--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -26,7 +26,8 @@
 	</PreferenceCategory>
 
     <PreferenceCategory android:title="@string/prefs_category_instant_uploading" android:key="instant_uploading_category">
-		<com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:key="instant_uploading"
+		<com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle
+			android:key="instant_uploading"
 	                        android:title="@string/prefs_instant_upload"
 	                        android:summary="@string/prefs_instant_upload_summary"/>
          <com.owncloud.android.ui.PreferenceWithLongSummary
@@ -35,7 +36,8 @@
 	    <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle
 	        				android:title="@string/instant_upload_on_wifi"
 	        				android:key="instant_upload_on_wifi"/>
-	    <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:key="instant_video_uploading"
+	    <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle
+			android:key="instant_video_uploading"
 	                        android:title="@string/prefs_instant_video_upload"
 	                        android:summary="@string/prefs_instant_video_upload_summary" />
 	    <com.owncloud.android.ui.PreferenceWithLongSummary
@@ -44,7 +46,8 @@
 	    <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle
 	        				android:title="@string/instant_video_upload_on_wifi"
 	        				android:key="instant_video_upload_on_wifi"/>
-		<com.owncloud.android.ui.dialog.OwnCloudListPreference android:key="prefs_instant_behaviour"
+		<com.owncloud.android.ui.dialog.OwnCloudListPreference
+			android:key="prefs_instant_behaviour"
 			android:dialogTitle="@string/prefs_instant_behaviour_dialogTitle"
 			android:title="@string/prefs_instant_behaviour_title"
 			android:entries="@array/pref_behaviour_entries"
